add fetch request

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,31 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Parser</title>
+    <style>
+        input {
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
     <h3>Parser</h3>
+
+    <table>
+        <tr>
+            <td>site</td>
+            <td><input type="text" id="site"></td>
+        </tr>
+        <tr>
+            <td>page</td>
+            <td><input type="text" id="page"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><button id="submit">submit</button></td>
+        </tr>
+    </table>
+
+    <div id="content"></div>
 
     <script src="assets/script.js"></script>
 </body>
